Separating further event categories

--- a/test/grid/Data/multicrab.cfg
+++ b/test/grid/Data/multicrab.cfg
@@ -10,3 +10,7 @@ CMSSW.lumi_mask   = LowLumiRuns2012_JSON.txt
 [SingleElectron]
 CMSSW.datasetpath = /SingleElectron/Run2012A-22Jan2013-v1/AOD  
 CMSSW.lumi_mask   = LowLumiRuns2012_JSON.txt
+
+[MuEG]
+CMSSW.datasetpath = /MuEG/Run2012A-22Jan2013-v1/AOD  
+CMSSW.lumi_mask   = LowLumiRuns2012_JSON.txt
