--- a/test/grid/mc/multicrab.cfg
+++ b/test/grid/mc/multicrab.cfg
@@ -6,7 +6,7 @@ CMSSW.pset = ../../runSManalyzer_mc_cfg.py
 [WminusToMuNu]
 CMSSW.datasetpath = /WminusToMuNu_CT10_TuneZ2star_8TeV-powheg-pythia6/Summer12-PU_S8_START52_V9-v2/AODSIM
 
-[WplusToMuNu]
+[WplusToMuNu_v2]
 CMSSW.datasetpath = /WplusToMuNu_CT10_TuneZ2star_8TeV-powheg-pythia6/Summer12-PU_S8_START52_V9-v2/AODSIM
 
 [WminusToENu]
