--- a/test/grid/Data/multicrab.cfg
+++ b/test/grid/Data/multicrab.cfg
@@ -7,7 +7,7 @@ CMSSW.pset = ../../runSManalyzer_data_cfg.py
 CMSSW.datasetpath= /SingleMu/Run2012A-22Jan2013-v1/AOD    
 CMSSW.lumi_mask   = LowLumiRuns2012_JSON.txt 
 
-[SingleElectron]
+[SingleElectron_v2]
 CMSSW.datasetpath = /SingleElectron/Run2012A-22Jan2013-v1/AOD  
 CMSSW.lumi_mask   = LowLumiRuns2012_JSON.txt
 
